--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "iview-lsh",
+  "name": "post-ui",
   "version": "3.5.4",
-  "title": "iview-lsh",
+  "title": "post-ui",
   "description": "A high quality UI components Library with Vue.js",
   "homepage": "http://iview.talkingdata.com",
   "keywords": [
@@ -36,7 +36,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/iview/iview"
+    "url": "https://github.com/lsh521/post-ui.git"
   },
   "author": "Aresn",
   "license": "MIT",
@@ -82,7 +82,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.10.0",
     "gulp-less": "^4.0.1",
